--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/utilities';
+@import 'tailwindcss/components';
+@import 'tailwindcss/base';
